# Chugoku-Usagi-mcp

./: .gitignore  CLAUDE.md  flake.nix  pyproject.toml
src/voicevox_claude/: __init__.py  __main__.py  audio.py  config.py  errors.py  server.py  voicevox.py
src/voicevox_claude/characters/: __init__.py  base.py
src/voicevox_claude/characters/data/: chugoku_usagi.toml
